--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ favicon         : /assets/branding/favicon.ico
 
 ## Output
 url             :                ## Optional
-baseurl         : /aranda-jekyll-theme
+baseurl         : /tables
 destination     : _site          ## Output folder
 
 ## Collection Settings
